styles/stylesheet.css
* {
  box-sizing: border-box;
}

/*HEADER AND NAVBAR*/
header {
    background-color: #03a3df;
    padding-top: 20px;
}

.logo {
    padding-left: 2rem;
}

.navbar {
    display: flex;
    justify-content: space-between;
    justify-content: space-around;
    align-items: center;
    background-color: #1b447f;
    margin-top: 20px;
    padding-left: 2rem;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}

.navbartext {
    color: #FFFFFF;
    font-family: Arial, sans-serif;
    font-weight: bold;
}

/*MAIN BODY*/
body{
    padding: 0;
    margin: 0;
}

main {
    padding-left: 2rem;
}

aside {
    padding-right: 2rem;
}

h1 {
    color: #444444;
    font-family: Arial, sans-serif;
    font-weight: bold;
    font-size: 40px;
}

h2 {
    color: #444444;
    font-family: Arial, sans-serif;
    font-weight: bold;
    font-size: 24px;
}

h3 {
    color: #444444;
    font-family: Arial, sans-serif;
    font-weight: bold;
    font-size: 17;
}

p {
    color: #444444;
    font-family: Arial, sans-serif;
    font-size: 17px;
}

.hryellow {
    color: #ecb722;
    border-style: solid;
    border-width:2px;
}

.hrblue {
    color: #1b447f;
    border-style: solid;
}

.container {
    margin-left: 2rem;
}

.instructors {
    display: flex;
    gap: 2rem;
    margin-top: 1rem;
    align-items: center;
}

.main-grid {
    display:grid;
    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
    justify-content: center;
    margin-right: 2rem;
}

.flex-container-2 {
    display: grid;
}

.flex-gap-20 {
    gap: 40px;
}

.flex-item-1 {
    grid-column-start: 1;
    max-width: 40rem;
}

.flex-item-2 {
    grid-column-start: 2;
}

/*FOOTER*/
footer {
    background-image: url(../images/footerImage.jpg);
    background-color:#1b447f;
    padding: 1.5rem;
    text-align: center;
    position: relative;
    bottom: 0;
}

.footertext {
    color: #FFFFFF;
    font-size: 17px;
}

